<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#80000000">

    <LinearLayout
        android:id="@+id/sec_controlvid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/barra"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/exo_rew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:contentDescription="Retroceder 5 segundos "
            android:src="@drawable/ic_baseline_replay" />

        <ImageView
            android:id="@+id/exo_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Reproducir el video"
            android:src="@drawable/ic_round_play_arrow" />

        <ImageView
            android:id="@+id/exo_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Pausar el video"
            android:src="@drawable/ic_round_pause" />

        <ImageView
            android:id="@+id/exo_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Repetir el video"
            android:src="@drawable/ic_outline_stop_circle" />

        <ImageView
            android:id="@+id/exo_ffwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:contentDescription="Adelantar 5 segundos"
            android:src="@drawable/ic_baseline_forward" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exo_position"
            android:textColor="@color/white"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textColor="#CBCDC8"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/exo_duration"
            android:textColor="#CBCDC8"/>

            <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_round_fullscreen"
            android:id="@+id/exo_fullscreen"
                android:visibility="invisible"
            android:theme="@style/ClickableView"/>

        </LinearLayout>

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/exo_progress"
            android:layout_marginTop="8dp"
            app:unplayed_color="#45424E"
            app:buffered_color="#95989F"
            app:played_color="#FF0000"
            app:scrubber_color="#FF0000"/>

    </LinearLayout>


</RelativeLayout>