<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity=""
    android:background="@color/gray03"
    tools:context=".view.FirstUserListActivity">

    <TextView
        android:id="@+id/editTextSpeech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="Reconocimiento"
        android:padding="10dp"
        android:contentDescription="Campo de texto del reconocimiento de voz "
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/carviewpantalla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/editTextSpeech"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    app:cardCornerRadius="10dp">
                    <ImageView
                        android:id="@+id/libroImg2"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textStyle="bold|normal"
                        android:layout_gravity="center"
                        android:text="Libro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/libroName2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textStyle="bold|normal"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/libroInfo2"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textStyle="bold|normal"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>



            </LinearLayout>

            <ImageButton
                android:id="@+id/descripcionbutton"
                android:contentDescription="Desplegar descripción del libro"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_keyboard_double_arrow_down_24"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleruser1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/row_user_list"
        android:layout_below="@id/carviewpantalla"
        android:layout_above="@id/bottomLl"
        android:layout_margin="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="true"
        android:layout_below="@id/carviewpantalla"
        tools:visibility="gone">


        <LinearLayout
            android:id="@+id/viewLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"

            >
            <include layout="@layout/view_loading_shimmer_2"/>
            <include layout="@layout/view_loading_shimmer_2"/>
            <include layout="@layout/view_loading_shimmer_2"/>
            <include layout="@layout/view_loading_shimmer_2"/>
            <include layout="@layout/view_loading_shimmer_2"/>

        </LinearLayout>


    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/ReconocerBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:drawableLeft="@drawable/ic_outline_mic"
            android:text="Reconocimiento"
            android:textAllCaps="false"
            android:backgroundTint="#3c4ca8"
            app:cornerRadius="30dp"
            android:contentDescription="Botón para iniciar el reconocimiento de voz "
            />

    </LinearLayout>

</RelativeLayout>