<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pdfs.PdfViewActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/background_personalizado">

        <ImageButton
            android:id="@+id/buttomregresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_margin="2dp"
            android:padding="20dp"
            android:contentDescription="Regresar a los archivos de la poesia"
            android:src="@drawable/text_arrow_back_24"/>

        <TextView
            android:id="@+id/toolbarSubtittleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="N/N"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </RelativeLayout>

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbarRl"
            android:contentDescription="Este archivo PDF no compaible con tallback
 porfavor utiliza el arvhivo de texto"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>


<!--

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRl"/>-->
    </RelativeLayout>